codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__spine_tree__tests__live_spawn_settlement_handoff.snap
---
source: tui/src/history_cell/spine_tree.rs
expression: rendered
---
• Spine Tree
  └ ✓ visible before baseline
