codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__spine_tree__tests__live_spawn_without_authoritative_tree.snap
---
source: tui/src/history_cell/spine_tree.rs
expression: rendered
---
• Spine Tree
  └ Blooming visible before baseline
       Waiting for activity...
