codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__spine_tree__tests__settled_spawn_authoritative_history.snap
---
source: tui/src/history_cell/spine_tree.rs
expression: history
---
• Spine Tree
  └ ✓ visible after settlement
